fixed squeezed image on mobile AGAIN

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ div.header{
 
 div.header img{
   height: 100%;
-  max-width: 400%;
+  max-width: 1000%;
 }
 
 .tn_under{
